force-app/main/default/objects/Agent_Setting__mdt/Agent_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Agent Setting</label>
    <pluralLabel>Agent Settings</pluralLabel>
</CustomObject>