force-app/main/default/objects/Agent_Setting__mdt/fields/Brave_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Brave_API_Key__c</fullName>
    <label>Brave API Key</label>
    <length>55</length>
    <type>Text</type>
</CustomField>