force-app/main/default/objects/Agent_Setting__mdt/fields/Slack_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Team_Id__c</fullName>
    <label>Slack Team Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>